...
                            onClearAllHistory = { searchViewModel.clearSearchHistory() },
                            placeholder = { Text(stringResource(R.string.home_search_placeholder)) },
                            leadingIcon = {
                                IconButton(onClick = { onOpenDrawer() }) {
                                    Icon(
                                        imageVector = Icons.Default.Menu,
                                        contentDescription = "Menu"
                                    )
                                }
                            },
                            trailingIcon = {
                                Row(
                                    verticalAlignment = Alignment.CenterVertically,
...
                                            searchViewModel.search(searchQuery)
                                            focusManager.clearFocus()
                                        }
                                    }) {
                                        Icon(
                                            imageVector = Icons.Default.Search,
                                            contentDescription = "Search"
                                        )
                                    }
                                }
                            }
                        )
                    }
...
