...
                    FilledTonalIconButton(
                        onClick = onSettingsClick,
                        shape = CircleShape
                    ) {
                        Icon(
                            imageVector = Icons.Default.Settings,
                            contentDescription = "Settings"
                        )
                    }
                }
            }
        }
    }
...
